--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@azure/digital-twins-core": "^1.1.0",
     "@azure/identity": "^4.0.0",
     "express": "^4.18.2",
-    "socket.io": "^4.7.3"
+    "socket.io": "^4.7.3",
+    "ws": "^8.16.0"
   }
 }
